--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
   <name>hello</name>
   <description>Hello World!</description>
   
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
+  
   <build>
 	<plugins>
 	  <plugin>
