--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,5 +30,6 @@ jobs:
     - name: Build with Maven
       run: |
         mvn -B package --file pom.xml
-        ls-la
+        pwd
+        ls -la
         java -jar hello.world-1.0.0-jar-with-dependencies.jar
